<resources>

    <string name="app_name">Street Pal</string>
    <string name="logintoacc">Log into your \n  \t\t\t account</string>
    <string name="password">Password</string>
    <string name="user_name">Username or E-mail</string>
    <string name="select_contact">Select your  trusted contact</string>
    <string name="contact_name">Name</string>
    <string name="register_txt">Don\'t have an account? <b>Sign Up</b></string>
    <string name="contact_mob">Mobile</string>
    <string name="select_button">Select</string>
    <string name="action_done">Done</string>
    <string name="login">Login</string>
    <string name="OPenG">OPen Gallery</string>
    <string name="OPenC">OPen Camera</string>
    <string name="EditTxt">Confirmation Code </string>
    <string name="btn1">Submit</string>
    <string name="btn2">Resend </string>
    <string name="b"> Select From  </string>
    <string name="TxtView"> Confirmation Code Will Be Send Within 60 Sec.
    </string>
    <string name="privateinfo">Private Information</string>
    <string name="confrim_title">CONFIRMATION</string>
    <string-array name="Sex">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="change_profile_text">Change Profile Picture</string>
    <string name="user_name_hint">User Name</string>
    <string name="mail_hint">Mail</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="sex_hint">Sex</string>
    <string name="age_hint">Age</string>
    <string name="work_hint">Work</string>
    <string name="national_id_hint">National ID</string>
    <string name="password_hint">Password</string>
    <string name="back_button">Back</string>
</resources>
