<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="2dp"
    tools:context="com.sharekeg.streetpal.Registration.ConfirmationActivity">

    <TextView
        android:id="@+id/tvconfirmation"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/confrim_title"
        android:textColor="#000" />

    <TextView
        android:id="@+id/tvback"
        android:layout_width="52dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg" />

    <EditText
        android:id="@+id/ET_Code"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/EditTxt"
        android:textColor="@color/black"
        android:textColorHint="@color/Darkgray"
        android:textSize="12dp"
        />

    <TextView
        android:id="@+id/TimerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/black" />

    <Chronometer
        android:id="@+id/chrono"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/TV_Confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="160dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/IV_confirm"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/ic_confirm_icon" />

    <TextView
        android:id="@+id/tv_welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IV_confirm"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="Welcome Nasser !"
        android:textColor="@color/Green"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_Submit"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/ET_Code"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/signupbtn"
        android:text="@string/btn1"
        android:textAllCaps="false"
        android:textSize="12dp" />

    <Button
        android:id="@+id/btn_ResendCode"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/btn_Submit"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/resend_btn"
        android:text="@string/btn2"
        android:textAllCaps="false"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/TV_Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IV_confirm"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/TxtView"
        android:textColor="@color/Darkgray"
        android:textSize="12dp" />

</RelativeLayout>
